- Update GUI - Add friend panel and associate friends list with user

--- a/client/room.html
+++ b/client/room.html
@@ -10,6 +10,7 @@
         </div>
         <div class="row">
             <div class="user-interactive-panel col-md-3 left-panel">
+                {{>friendListing}}
             </div>
             <div class="message-board col-md-9 right-panel">
                 {{> yield  }}
