- Add dropdown menu when click on - Update channel and friend display system

--- a/client/room.html
+++ b/client/room.html
@@ -1,5 +1,5 @@
 <template name="app">
-    <div class="container-fluid" style="max-width:70vw;background-color:#F2F1EF;margin:auto; padding:auto;">
+    <div class="container-fluid" style="background-color:#F2F1EF;margin:auto; padding:auto;">
         <div class="header row">
             <div class="app-menu col-md-3 left-panel">
                 {{> header}}
